Refactor the logic of the project and fixing the tests